BugId:12664 Fixing vertical scrollbar issue on editor pages.
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@43796 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_Footer.scss
+++ b/skins/oasis/css/core/_Footer.scss
@@ -1,6 +1,3 @@
-.rte .WikiaFooter .toolbar:after {
-	display: none;
-}
 .WikiaFooter {
 	clear: both;
 	padding-top: 23px;
@@ -234,4 +231,8 @@
 			}
 		}
 	}
+}
+
+.editor .WikiaFooter .toolbar:after {
+	height: 0;
 }
